<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Home -->
    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        //android:clipToOutline="true">

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="562dp"
            android:layout_height="887dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/rectangle_1" />

        <!-- 03_Desktop -->
        <View
            android:id="@+id/desktop03"
            android:layout_width="412dp"
            android:layout_height="234dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/desktop03" />

        <!-- 02_Desktop -->
        <View
            android:id="@+id/desktop02"
            android:layout_width="412dp"
            android:layout_height="234dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/desktop" />

        <!-- Rectangle 2 -->
        <View
            android:id="@+id/rectangle_2"
            android:layout_width="345dp"
            android:layout_height="165dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="128dp"
            android:background="@drawable/rectangle_2"
            />

        <!-- Rectangle 4 -->
        <View
            android:id="@+id/cardview"
            android:layout_width="243.75dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="401dp"
            android:background="@drawable/cardview"
            />

        <!-- Rectangle 5 -->
        <View
            android:id="@+id/rectangle_5"
            android:layout_width="243.75dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="541dp"
            android:background="@drawable/rectangle_blb2"
            />

        <!-- RABU, 5 FEBRUARI 2020 -->
        <TextView
            android:id="@+id/rabu_5_febr"
            android:layout_width="138dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="320dp"
            android:text="@string/rabu_5_febr"
            android:textAppearance="@style/rabu_5_febr"
            android:gravity="top"
            />

        <!-- Pulang dari China, Mahasiswi Diisolasi -->
        <TextView
            android:id="@+id/pulang_dari"
            android:layout_width="138dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="136dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="435dp"
            android:text="@string/pulang_dari"
            android:textAppearance="@style/pulang_dari"
            android:gravity="top"
            />

        <!-- 4 FEB, 12.30 -->
        <TextView
            android:id="@+id/feb_12_30"
            android:layout_width="138dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="136dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="478dp"
            android:text="@string/feb_12_30"
            android:textAppearance="@style/feb_12_30"
            android:gravity="top"
            />

        <!-- 4 FEB, 12.30 -->
        <TextView
            android:id="@+id/feb_12_30"
            android:layout_width="138dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="137dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="624dp"
            android:text="@string/feb_12_30"
            android:textAppearance="@style/feb_12_30"
            android:gravity="top"
            />

        <!-- Pulang dari China, Mahasiswi Diisolasi -->
        <TextView
            android:id="@+id/pulang_dari"
            android:layout_width="138dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="136dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="580dp"
            android:text="@string/pulang_dari"
            android:textAppearance="@style/pulang_dari"
            android:gravity="top"
            />

        <!-- Group 3 -->
        <View
            android:id="@+id/group_3"
            android:layout_width="85dp"
            android:layout_height="27.2dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="126dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="354dp"
            android:background="#00000000"
            />

        <!-- Rectangle 10 -->
        <Button
            android:id="@+id/rectangle_blb"
            android:layout_width="85dp"
            android:layout_height="27.2dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="126dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="354dp"
            android:background="@drawable/rectangle_blb"
            android:text="LIHAT LEBIH"
            android:textSize="10sp"
            android:textStyle="bold"
            />

        <!-- Group 4 -->
        <View
            android:id="@+id/group_4"
            android:layout_width="85dp"
            android:layout_height="27.2dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="181dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="688dp"
            android:background="#00000000"
            />

        <!-- Rectangle 10 -->
        <Button
            android:id="@+id/rectangle_blb2"
            android:layout_width="85dp"
            android:layout_height="27.2dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="181dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="688dp"
            android:background="@drawable/rectangle_blb"
            android:text="LIHAT LEBIH"
            android:textSize="10sp"
            android:textStyle="bold"
            />


        <!-- Group 2 -->
        <View
            android:id="@+id/group_2"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="143dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="236dp"
            android:background="#00000000"
            />

        <!-- Rectangle 9 -->
        <Button
            android:id="@+id/rectangle_9"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="143dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="236dp"
            android:background="@drawable/rectangle_9"
            android:text="@string/baca_lebih"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

        <!-- Group 1 -->
        <View
            android:id="@+id/group_1"
            android:layout_width="86dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="163dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="142dp"
            android:background="#00000000"
            />

        <!-- thunderbolt -->
        <View
            android:id="@+id/thunderbolt"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="163dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="143dp"
            android:background="@drawable/thunderbolt"
            />

        <!-- TRENDING -->
        <TextView
            android:id="@+id/trending"
            android:layout_width="66dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="183dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="142dp"
            android:text="@string/trending"
            android:textStyle="bold"
            android:textAppearance="@style/trending"
            android:gravity="top"
            />


        <!-- NW NEWS -->
        <TextView
            android:id="@+id/nw_news"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="356dp"
            android:text="@string/nw_news"
            android:textAppearance="@style/nw_news"
            android:textStyle="bold"
            android:gravity="top"
            />


        <!-- Rahasia Dibalik “Desain” CyberTruck Milik Tesla -->
        <TextView
            android:id="@+id/rahasia_dib"
            android:layout_width="292dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="174dp"
            android:text="@string/rahasia_dib"
            android:textAppearance="@style/rahasia_dib"
            android:gravity="center_horizontal|top"
            />

        <!-- BERITA POPULER -->
        <TextView
            android:id="@+id/berita_popu"
            android:layout_width="138dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="690dp"
            android:text="@string/berita_popu"
            android:textAppearance="@style/berita_popu"
            android:gravity="top"
            android:textStyle="bold"
            />

        <!-- Rectangle 6 -->
        <View
            android:id="@+id/rectangle_6"
            android:layout_width="243.75dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="293dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="401dp"
            android:background="@drawable/rectangle_blb3"
            />

        <!-- Rectangle 7 -->
        <View
            android:id="@+id/rectangle_7"
            android:layout_width="243.75dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="293dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="541dp"
            android:background="@drawable/rectangle_blb3"
            />

        <!-- star (1) -->
        <View
            android:id="@+id/star"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="347dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="142dp"
            android:background="@drawable/star"
            />

        <!-- star (1) -->
        <View
            android:id="@+id/star_1_"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="248dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="413dp"
            android:background="@drawable/star"
            />

        <!-- star (1) -->
        <View
            android:id="@+id/star_1_"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="248dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="554dp"
            android:background="@drawable/star"
            />

        <!-- Group 8 -->
        <View
            android:id="@+id/group_8"
            android:layout_width="411dp"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="742dp"
            android:background="#00000000"
            />

        <!-- Rectangle 3 -->
        <View
            android:id="@+id/rectangle_3"
            android:layout_width="411dp"
            android:layout_height="135dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="760dp"
            android:background="@drawable/menubar"
            />

        <!-- home-run -->
        <View
            android:id="@+id/home_run"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="43dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="775dp"
            android:background="@drawable/home_run"
            />

        <!-- account -->
        <Button
            android:id="@+id/account"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="337dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="775dp"
            android:background="@drawable/account"
            />

        <!-- search -->
        <View
            android:id="@+id/search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="139dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="776dp"
            android:background="@drawable/search"
            />

        <!-- star (1) -->
        <View
            android:id="@+id/star_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="242dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="773dp"
            android:background="@drawable/star"
            />

        <!-- Group 5 -->
        <View
            android:id="@+id/group_5"
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="368dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:background="@drawable/menuicon"
            />

        <!-- 6acec226-3df8-43ee-beb4-06865feeb5f8_169 -->
        <View
            android:id="@+id/back1"
            android:layout_width="71.69dp"
            android:layout_height="71.69dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="318.31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="567.4dp"
            android:background="@drawable/bek"
            />

        <!-- 6acec226-3df8-43ee-beb4-06865feeb5f8_169 -->
        <View
            android:id="@+id/back2"
            android:layout_width="71.69dp"
            android:layout_height="71.69dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="318.31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="423dp"
            android:background="@drawable/bek"
            />

        <!-- 6acec226-3df8-43ee-beb4-06865feeb5f8_169 -->
        <View
            android:id="@+id/back3"
            android:layout_width="71.69dp"
            android:layout_height="71.69dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="567.4dp"
            android:background="@drawable/bek"
            />

        <!-- 6acec226-3df8-43ee-beb4-06865feeb5f8_169 -->
        <View
            android:id="@+id/back4"
            android:layout_width="71.69dp"
            android:layout_height="71.69dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="423dp"
            android:background="@drawable/bek"
            />


    </RelativeLayout>

</LinearLayout>